data/derived/comb/progs/unify/prog6003.ml.out
Characters 159-160:
  List.fold_left f base l;;
                        ^
Error: This expression has type string but an expression was expected of type
         'a list
